# dates-app

./: .bazelrc  .editorconfig  .gitignore  .impeccable.md  .mcp.json  AGENTS.md  ARCHITECTURE_DIAGRAMS.md  BUILD.bazel  DATES_MVP_PLAN.md  DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md  MODULE.bazel  PAIRING_TEST_GUIDE.md  RAILWAY_SETUP.md  README.md  railway.json  skills-lock.json  test_app.sh  test_pairing.sh
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  Makefile  go.mod  go.sum
backend/cmd/dates-api/: main.go  wire.go  wire_gen.go
backend/internal/app/: app.go
backend/internal/auth/: errors.go  service.go  service_test.go
backend/internal/config/: config.go
backend/internal/couples/: model.go  service.go
backend/internal/dates/: model.go  service.go
backend/internal/httpserver/: auth_handlers.go  auth_handlers_test.go  couples_handlers.go  dates_handlers.go  middleware.go  server.go  server_test.go
backend/migrations/: 000001_auth_schema.down.sql  000001_auth_schema.up.sql
modules/test_valdi/: BUILD.bazel  README.md
modules/test_valdi/DatesApp/: DatesApp.swift  DesignSystem.swift
modules/test_valdi/DatesApp/Models/: DatePlan.swift
modules/test_valdi/DatesApp/Services/: APIClient.swift  CoreDataManager.swift  DateStorageService.swift  NotificationService.swift
modules/test_valdi/DatesApp/Views/: AuthView.swift  ContentView.swift  DateDetailView.swift  DateFormView.swift  PairingView.swift
