module(name = "dates_app", version = "0.1")

# -- Apple/Swift rules for iOS development -----------------------------------
bazel_dep(name = "rules_apple", version = "4.0.0", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_swift", version = "2.4.0", repo_name = "build_bazel_rules_swift")
